<resources>
    <string name="app_name">VeyeR</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ins1">1) Click \"GO VIRTUAL\" and insert your Smart-phone into VR headset.</string>
    <string name="ins21">2) If you wear Specs, Please remove it and wear the VR headset.</string>
    <string name="ins2">3) Remember the colors under which the text is not clearly visible to you and Click \"NEXT\".</string>
    <string name="ins3">Select the Colors under which the\nText is not clearly visible to you</string>
    <string name="ins4">Click here if you want to visit VR again ></string>
    <string name="ques1">1) What color did you see above letter \'E\' ?</string>
    <string name="ques2">2) What color did you see above letters \'TEPOZ\' ?</string>
    <string name="ques3">3) What color did you see above letters \'DFOTP\' ?</string>
    <string name="ans">Color Blindness</string>
    <string name="mail">projectveyer@gmail.com</string>
    <string name="note">Its is recommended to connect your headphones for better Experience !</string>
    <string name="about">VeyeR is an eye checkup app in which makes a preliminary eye check-up and Color Blindness that can be done by any Individual at any instance without the help of an Optometrist through Virtual Reality.</string>
    <string name="about_note">NOTE: Tests aren\'t intended to replace complete Ophthalmological checkups and the results should not be interpreted as prescription or basis for any eye treatment.</string>
    <string name="copyrights">Copyrights © 2019 | VeyeR</string>
</resources>
