<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end"
    tools:context=".questionActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    app:cardBackgroundColor="#212121"
                    app:cardCornerRadius="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ans"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:gravity="center"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ques1"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp"/>

                <RadioGroup
                    android:id="@+id/rg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp">
                        <RadioButton
                            android:id="@+id/red"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Red"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:id="@+id/green"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Green"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:id="@+id/notsure1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Not Sure"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ques2"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp"/>
                <RadioGroup
                    android:id="@+id/rg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp">
                        <RadioButton
                            android:id="@+id/blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Blue"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:id="@+id/green1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Green"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:id="@+id/notsure2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Not Sure"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ques3"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="20dp"/>
                <RadioGroup
                    android:id="@+id/rg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp">
                        <RadioButton
                            android:id="@+id/yellow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Yellow"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:id="@+id/voilet"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Violet"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:id="@+id/notsure3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Not Sure"
                            android:textSize="10sp"
                            android:textColor="@color/colorWhite"
                            android:buttonTint="@color/colorWhite"
                            android:layout_weight="1"/>
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitbut"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Submit"
                    android:textColor="@color/colorBlack"
                    android:theme="@style/ColoredButtonRipple" />
                <TextView
                    android:id="@+id/backtovrbut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ins4"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_marginTop="20dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navig"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/drawer_banner"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        app:itemTextColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>
</androidx.drawerlayout.widget.DrawerLayout>