<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end"
    tools:context=".homeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="13dp"
                app:cardBackgroundColor="#212121"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Follow the Instructions"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:gravity="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp"
                        android:gravity="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="13dp"
                app:cardBackgroundColor="#212121"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ins1"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"/>

                    <ImageView
                        android:layout_width="312dp"
                        android:layout_height="172dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/insert" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ins21"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/virtualbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:theme="@style/ColoredButtonRipple"
                android:text="Go Virtual"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="13dp"
                app:cardBackgroundColor="#212121"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ins2"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="312dp"
                        android:layout_height="172dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/blur1" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/colorbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:theme="@style/ColoredButtonRipple"
                android:text="Next   >"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
    android:id="@+id/navig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:headerLayout="@layout/drawer_banner"
    app:menu="@menu/main_menu"
    android:layout_gravity="start"
    app:itemTextColor="@color/colorAccent"
    android:background="@color/colorPrimary"/>

</androidx.drawerlayout.widget.DrawerLayout>